# Slicer-RadPathFusion

./: .gitignore  CMakeLists.txt  README.md
CmdLineTools/: parse_study_dict.py  test_apply_transform.py  test_run_registration.py
RadPathFusion/: CMakeLists.txt  ParsePathJson.py  RadPathFusion.py  ReconstructPathology.py
RadPathFusion/Resources/RegistrationParameters/: Affine.txt  Deformable.txt  QuickCenteringRigid.txt  Similarity.txt
RadPathFusion/Resources/Utils/: ImageRegistration.py  ImageStack.py  ParsePathJsonUtils.py  RegisterVolumesElastix.py
TCIA_Test_Case/: aaa0060.json  registration.json
TCIA_Test_Case/Histopathology/: aaa0060.json
